Mon Apr 12 13:15:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSCountedSet.m: Make copying behavior be same as OPENSTEP
	* Source/NSSet.m: Fix memory scribbling bug in ([-initWithSet:])
	* Source/NSGSet.m: Tidied types in fast map.
	* Source/NSGArray.m: Minor optimisationin copy etc.
	* Source/NSGDictionary.m: Tidied types in fast map.
	* Source/NSSerializer.m: Tidied types in fast map and array.
	* Source/NSArchiver.m: Tidied types in fast map and array.
	* Source/NSUnarchiver.m: Tidied types in fast map and array.
	* Source/FastArray.x: Tidied, fixed init bug, movied to include
	* Source/FastMap.x: Tidied, moved to include
	* Source/NSZone.m: Dummy zone for use with GC.
	* Source/include/NSZone.h: Dummy zone for use with GC.
	* Source/include/GSUnion.h: Unions for use with Fast... 
	* Source/include/FastArray.x: New from Source
	* Source/include/FastMap.x: New from Source
	* Source/GNUmakefile: Added FastArray.x, FastMap.x, GSUnion.h
	* Source/Makefile.postamble: Added FastArray.x FastMap.x GSUnion.h.
	* NSCharacterSets/GNUmakefile: List all new character set names.

Fri Apr 9 22:04:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSGAttributedString.m: Final optimisation - remove almost all
	objc runtime overhead.  Combined changes should result in a factor of
	2 to 10 speedup (depending on operation) over original code.

Fri Apr 9 16:22:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSAttributedString.m: Implement tracking of changes to 
	string returned by [-mutableString] method.  Simplified initialisation.
	* Source/include/NSAttributedString.h: Updated.
	* Source/NSGAttributedString.m: Rewrite to get rid of all known
	problems and to boost performance hugely.
	* Source/include/NSGAttributedString.h: Updated.
	* Source/NSString.m: ([-_baseCount]) optimised.
	* Source/NSGString.m: ([-_baseCount]) optimised.

1999-04-09  Adam Fedor  <fedor@gnu.org>
