@@ -1,3 +1,7 @@
+Tue Apr 13 21:00:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>
+
+	* Source/NSUser.m: Implemented NSFullUserName()
+
 Mon Apr 12 13:15:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>
 
 	* Source/NSCountedSet.m: Make copying behavior be same as OPENSTEP
